# lets-be-rational

./: CMakeLists.txt
include/: XLFunctions.h  XLOper.h  lets_be_rational.h  normaldistribution.h
src/: CMakeLists.txt  XLFunctions.cpp  XLOper.cpp  dllmain.cpp  dllmain.h  erf_cody.cpp  lets_be_rational.cpp  normaldistribution.cpp  rationalcubic.cpp  rationalcubic.h  version.h
